cabal-version:      2.4
name:               atcoder
version:            0.1.0.0
author:             yoshitsugu
maintainer:         yoshitsugu@users.noreply.github.com
license:            MIT

executable x201912-h
    main-is:          x201912-h.hs
    build-depends:
        base ^>=4.14.1.0
      , bytestring
      , vector
    default-language: Haskell2010
    hs-source-dirs: src

executable x202005-h
    main-is:          x202005-h.hs
    build-depends:
        base ^>=4.14.1.0
      , bytestring
      , vector
      , mtl
    default-language: Haskell2010
    hs-source-dirs: src

executable abc114-c
    main-is:          abc114-c.hs
    build-depends:
        base ^>=4.14.1.0
      , bytestring
      , vector
    default-language: Haskell2010
    hs-source-dirs: src
